third_party/rust/cxx/v1/crate/tests/ui/drop_shared.stderr
error[E0119]: conflicting implementations of trait `ffi::_::forbid::Drop` for type `ffi::Shared`
 --> tests/ui/drop_shared.rs:3:5
  |
1 | #[cxx::bridge]
  | -------------- first implementation here
2 | mod ffi {
3 |     struct Shared {
  |     ^^^^^^^^^^^^^ conflicting implementation for `ffi::Shared`
